assets/scss/_common.scss
html {
  // font-size: 62.5%;
}

.main-blog-image {
  @include normal-image-processing {
    img {
      max-height: 700px;
    }
  }
}

.content {
  @include normal-image-processing;
  .vidcaption {
    @include video-shortcode-base {
      margin-bottom: 10px;
    }
    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      border: 0;
    }
  }
}

.bg-shape- {
  
  &stories {
    background: rgb(0, 129, 180);
  }
  
  &archive {
    background: rgb(3, 163, 169);
  }
  
  &resources {
    background: rgb(0, 152, 119);
  }
  
  &contact {
    background: rgb(209, 100, 0);
  }
  
  &about {
    background: rgb(30, 75, 160);
  }
}
/* *********************************** */
// re-usable components

.section {
  padding: 5rem 0;

  &-title {
    margin-bottom: 2.8rem;
    font-family: 'Red Hat Display' !important;
    font-weight: 800;
    letter-spacing: 2px;
  }
}

.hover {
  
  &-shadow {
    transition: .2s ease;

    &:hover {
      box-shadow: 0 1.125rem 2.5rem 0.5rem rgba(224, 241, 255, .54) !important;
    }

  }

  &-wrapper {
    overflow: hidden;

    & img {
      transition: .3s ease;
      transform: scale(1.1);
    }

    &:hover {
      & img {
        transform: scale(1)
      }

      & .hover-overlay {
        opacity: 1;
        visibility: visible
      }
    } 
  }

  &-overlay {
    position: absolute;
    height: 100%;
    width: 100%;
    border-radius: inherit;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, .3);
    opacity: 0;
    visibility: hidden;
    transition: .3s ease
  }

  &-content {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    right: 0;
    text-align: center
  }
}

.btn-alt {
    display: inline-block;
    font-weight: 400;
    color: #212529;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: transparent;
    border: 0;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;

    &:hover {
      text-decoration: none
    }

    &:focus {
      outline: 0;
      box-shadow: 0 0 0 .2rem rgba(0,123,255,.25)
    }
    &:not(:disabled):not(.disabled) {
      cursor: pointer
    }
}

.btn {
  font-size: 1.375rem;
  font-family: 'Playfair Display', serif;
  text-transform: capitalize;
  padding: 1rem 2.75rem;
  border-radius: 5px;
  font-weight: 600;
  border: 0;
  position: relative;
  z-index: 1;
  transition: .2s ease;
  letter-spacing: 1px;

  &:focus {
    outline: 0;
    box-shadow: none !important;
  }

  &:active {
    box-shadow: none;
  }

  &-sm {
    font-size: 0.9375rem;
    padding: 0.625rem 1.875rem;
  }

  &-xs {
    padding: 0.3125rem 0.625rem;
    font-size: 0.9375rem;
  }

  &-primary {
    background: var(--primary-color);
    color: #fff;

    &.active {
      opacity: .8;
    }

    &:active {
      background: var(--primary-color) !important
    }

    &:hover {
      background: var(--primary-color)
    }

    &.focus, &.active {
      background: var(--primary-color) !important;
      box-shadow: none !important
    }
  }

  &-transparent {
    background: transparent;
    color: var(--primary-color);
    font-weight: 700;
 
    &:active, &:hover {
      color: var(--primary-color)
    }
  }
}

.footer {
  &-section {
    padding-top: 12.5rem;
    
    & a {
      color: #fff;
      
      &:hover {
        color: #fff;
        text-decoration: underline;
      }
    }
  }

  &-bottom {
    & a {
      color: #999;
      text-decoration: underline;
    }
  }
}

.section-on-footer {
  margin-bottom: -12.5rem;
}


.navigation {
  padding: 2.5rem 8.125rem;
  transition: .3s ease;

  &.nav-bg {
    background-color: var(--primary-color);
    padding: 0.9375rem 6.25rem;

  }
}

.navbar .nav-item .nav-link {
  font-family: 'Red Hat Display' !important;
  font-weight: 600;
  text-transform: uppercase;
  padding: 0.9375rem;
}

.navbar .nav-item.active .nav-link{
  color: #fff017;
}

.navbar-dark .navbar-nav .nav-link {
  color: #fff;
}


/* *********************************** */
// Home page section

.homepage {
  &-abt-txt {
    font-size: 1.4rem;
  }

  &-story-map {
    margin-bottom: 1.8rem;
  }
}

.main-title {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -15%);
  width: 100%;
  align-content: center;
}

.main-circle {
  grid-column: 1/-1;
}

.tagline-circle {
  border-radius: 8px;
  background: $primary-color;
  padding: 3% 18% 3% 3%;
  position: relative;
  font-size: 2.1875rem;
  font-family: 'Red Hat Display' !important;
  font-weight: inherit;
  line-height: 2.6rem;
  letter-spacing: 1px;

  &::before {
    content: "";
    background-color: #fff;
    height: 120%;
    width: 45%;
    display: block;
    position: absolute;
    top: 50%;
    right: 0;
    border-radius: 50%;
    background-image: url($transparent_logo);
    background-size: 70%;
    background-repeat: no-repeat;
    background-position-x: center;
    background-position-y: 33%;
    transform: translate(60%, -50%);
  }
}


.social-icons-home {
  position: relative;

  & a {
    
    line-height: 3.4375rem;
    border-radius: 50%;
    display: block;
    font-size: 1.125rem;
    text-align: center;
    height: 3.125rem;
    width: 3.4375rem;

    &::before,
    &::after {
      content: "";
    
      height: 3.4rem;
      width: 3.4rem;
      display: block;
      border-radius: 50%;
      position: absolute;
      z-index: -23;
      top: 50%;
      left: 0;
      transform: translate(2%, -50%);
    }
    
    &::before {
      background-color: $primary-color;
      // carried over from template
      box-shadow: 0 18px 39.1px 6.9px rgba(224, 241, 255, 0.34);
    }
    
    &::after {
      height: 2.5rem;
      width: 2.5rem;
      transform: translate(21%, -50%);
      background-color: #fff;
    }
  }
}

.hero-area {
  height: 100vh;
  // TODO: make this variablized or something... (not local reference to url encoded path)
  background-image: url($hero_img);
  background-size: cover;
  background-position: bottom;
  position: relative;
}

.twitter-timeline {
  column-count: 2;
}

/* *********************************** */

.archive_gallery {
  &_container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem 0.5rem;
    align-items: center;
    cursor: pointer;
    // justify-items: center;
  }
  &_img {
    height: 20rem;
    width: 96%;
    background-position: center;
    background-size: cover;
    border-radius: 5px;
  }
}

// https://stackoverflow.com/a/61107170
// https://docs.google.com/spreadsheets/d/14KVHigDGfs9yDVmw96mWSMAG2wRaFc7B9WtLuukm3Uk/gviz/tq?tqx=out:csv&sheet=Sheet1

.archive_gallery_figure {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  & figcaption {
    padding: 1rem;
  }
}

// .archive_gallery_figure div {
// }

.vid_slides, .slides {
  display: flex;
  overflow: hidden;
  position: relative;
  margin: 0 auto;
  max-width: 100%;
  height: 50rem;
}

.vid_slide {
  grid-template-columns: repeat(2, 1fr);
}

.vid_slide, .slide {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  align-items: flex-start;
  justify-content: center;
  transition: transform 1s ease-in;
}

.vid_slides__btn, .slides__btn {
    position: absolute;
    top: 45%;
    z-index: 10;
    border: none;
    font-family: inherit;
    color: #333;
    border-radius: 50%;
    height: 2.5rem;
    width: 2.5rem;
    font-size: 3.25rem;
    cursor: pointer;
    background-color: transparent;

    &--left {
      left: 1%;
      transform: translate(-50%, -50%);
      outline: none !important;
    }

    &--right {
      right: 1%;
      transform: translate(-50%, -50%);
      outline: none !important;
    }
}

.vid_dots, .dots {
  position: absolute;
  bottom: 1%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;

  &__dot {
    border: none;
    background-color: #b9b9b9;
    opacity: 0.7;
    height: 1rem;
    width: 1rem;
    border-radius: 50%;
    cursor: pointer;
    transition: all 0.5s;

    &:not(:last-child) {
      margin-right: 1.75rem;
    }

    &--active {
      background-color: #888;
      opacity: 1;
    }
  }
}

.caption {
  margin-top: 0.5rem;
  align-self: start;
}

.modal {
  &__full {
    max-width: 90%;
  }
  &__slides {
    display: flex;
    overflow: hidden;
    position: relative;
    height: 90vh;
    flex: 1 1 100%;
  }
  &__slide {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    overflow: hidden;
    position: absolute;
    width: 100%;
    height: 100%;
    transition: transform 1s ease-in;
    
    & figcaption {
      margin: 1rem 2rem;
      max-width: 60%;
      text-align: center;
    }
  }
  &__img {
    max-height: 80%;
    max-width: 80%;
    background-position: center;
    background-size: cover;
    border-radius: 5px;
  }

  &__btn--left {
    left: 1%;
    transform: translate(-50%,-50%);
    outline: none !important;
  }
  &__btn--right {
    right: 1%;
    transform: translate(-50%,-50%);
    outline: none !important;
  }
}

.carousel {
  &__container {

    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem 1rem;
    align-items: center;
    // justify-items: center;
    
    & img {
      max-height: 300px;
      object-fit: cover;
      max-width: 100%;
      height: auto;
    }
  }

  &__figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    // min-height: 0;
  }

  &__caption {
    margin-top: -0.5rem;

  }

}

.social-icons {
  &__box {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
  }
  &__item {
    font-size: 1rem;
  }
}


.contact__form {
  width: 75%;
  height: 90rem;
  margin: 0;
  display: inline-block;
  border: 0;
}

.navbar_title {
  letter-spacing: inherit;
  font-weight: 600;
}

.dropdown-item:hover {
  background: #007bff;
  color: white;
}
.page-link {
  color: $primary-color;

}
.page-item {
  &.active .page-link {
    background-color: $primary-color;
  }
}

.nav-item .dropdown {
  &-item {
    margin-bottom: 0.5rem;
    color: white;

    &:hover, &:active {
      color: #212529;
      background: white;
    }
  }
}

.nav-item > .dropdown-menu {
  background: var(--primary-color);

  & .dropdown-item {
    padding: 0.45rem 1.5rem;
    border-radius: 5px;
  }
}

.nav-link.dropdown-toggle::after {
  opacity: 0;
  transition: all .55s;
}

.nav-item.dropdown:hover > .nav-link.dropdown-toggle::after {
  opacity: 1;
}

.dropdown-menu.show {
  border: none;
  top: 85%;
}

